Added the decompiler.

--- a/base_workspace/backend/decompiler/BUILD
+++ b/base_workspace/backend/decompiler/BUILD
@@ -49,5 +49,18 @@ cc_library(
     ":instruction_map",
     ":raw_instruction",
   ],
+)
+
+cc_library(
+  name = "decompiler",
+  hdrs = ["decompiler.h"],
+  srcs = ["decompiler.cc"],
+  deps = [
+    "//backend:config",
+    "//submodules:glog",
+    ":instruction",
+    ":instruction_map",
+    ":rom_reader",
+  ],
   visibility = ["//visibility:public"],
 )
