Removed the config.h jank.

--- a/base_workspace/backend/BUILD
+++ b/base_workspace/backend/BUILD
@@ -1,16 +1,7 @@
-cc_library(
-  name = "config",
-  hdrs = ["config.h"],
-  visibility = ["//visibility:public"],
-)
-
 cc_binary(
   name = "turbo",
   srcs = ["main.cc"],
-  deps = [
-    "//backend:config",
-    "//backend/clocktroller",
-  ],
+  deps = ["//backend/clocktroller"],
   linkopts = [
     "-L/usr/local/lib",
     "-lncurses",
