--- a/base_workspace/backend/decompiler/BUILD
+++ b/base_workspace/backend/decompiler/BUILD
@@ -1,24 +1,19 @@
 cc_library(
   name = "instruction",
   hdrs = ["instruction.h"],
-  deps = ["//backend:config"],
   visibility = ["//visibility:public"],
 )
 
 cc_library(
   name = "raw_instruction",
   hdrs = ["raw_instruction.h"],
-  deps = [
-    "//backend:config",
-    "//submodules:glog",
-  ],
+  deps = ["//submodules:glog"],
 )
 
 cc_library(
   name = "instruction_factory",
   hdrs = ["instruction_factory.h"],
   deps = [
-    "//backend:config",
     ":instruction",
     ":raw_instruction",
   ],
@@ -29,7 +24,6 @@ cc_library(
   hdrs = ["instruction_map.h"],
   srcs = ["instruction_map.cc"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":instruction",
     ":instruction_factory",
@@ -42,7 +36,6 @@ cc_library(
   hdrs = ["rom_reader.h"],
   srcs = ["rom_reader.cc"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":instruction",
     ":instruction_factory",
@@ -56,7 +49,6 @@ cc_library(
   hdrs = ["decompiler.h"],
   srcs = ["decompiler.cc"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":instruction",
     ":instruction_map",
