--- a/base_workspace/backend/memory/BUILD
+++ b/base_workspace/backend/memory/BUILD
@@ -1,23 +1,18 @@
 cc_library(
   name = "memory_segment",
   hdrs = ["memory_segment.h"],
-  deps = ["//backend:config"],
 )
 
 cc_library(
   name = "ram_segment",
   hdrs = ["ram_segment.h"],
-  deps = [
-    "//backend:config",
-    ":memory_segment",
-  ],
+  deps = [":memory_segment"],
 )
 
 cc_library(
   name = "vram_segment",
   hdrs = ["vram_segment.h"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":memory_segment",
   ],
@@ -28,7 +23,6 @@ cc_library(
   name = "echo_segment",
   hdrs = ["echo_segment.h"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":memory_segment",
     ":ram_segment",
@@ -38,17 +32,13 @@ cc_library(
 cc_library(
   name = "flags",
   hdrs = ["flags.h"],
-  deps = [
-    "//backend:config",
-    ":memory_segment",
-  ],
+  deps = [":memory_segment"],
 )
 
 cc_library(
   name = "internal_rom",
   hdrs = ["internal_rom.h"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":flags",
     ":memory_segment",
@@ -59,7 +49,6 @@ cc_library(
   name = "interrupt_flag",
   hdrs = ["interrupt_flag.h"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":memory_segment",
   ],
@@ -71,7 +60,6 @@ cc_library(
   hdrs = ["mbc.h"],
   srcs = ["mbc.cc"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":memory_segment",
   ],
@@ -81,7 +69,6 @@ cc_library(
   name = "default_module",
   hdrs = ["default_module.h"],
   deps = [
-    "//backend:config",
     ":echo_segment",
     ":memory_segment",
     ":module",
@@ -94,7 +81,6 @@ cc_library(
   name = "flag_container",
   hdrs = ["flag_container.h"],
   deps = [
-    "//backend:config",
     ":flags",
     ":memory_segment",
   ],
@@ -104,7 +90,6 @@ cc_library(
   name = "mbc_module",
   hdrs = ["mbc_module.h"],
   deps = [
-    "//backend:config",
     ":internal_rom",
     ":mbc",
     ":memory_segment",
@@ -117,7 +102,6 @@ cc_library(
   name = "unimplemented_module",
   hdrs = ["unimplemented_module.h"],
   deps = [
-    "//backend:config",
     ":flags",
     ":module",
   ],
@@ -128,7 +112,6 @@ cc_library(
   name = "module",
   hdrs = ["module.h"],
   deps = [
-    "//backend:config",
     ":memory_segment",
     ":flags",
   ],
@@ -139,7 +122,6 @@ cc_library(
   name = "primary_flags",
   hdrs = ["primary_flags.h"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":interrupt_flag",
     ":module",
@@ -152,7 +134,6 @@ cc_library(
   hdrs = ["memory_mapper.h"],
   srcs = ["memory_mapper.cc"],
   deps = [
-    "//backend:config",
     "//submodules:glog",
     ":flags",
     ":flag_container",
