--- a/base_workspace/submodules/BUILD
+++ b/base_workspace/submodules/BUILD
@@ -36,6 +36,7 @@ cc_library(
   srcs = [
     "glog/.libs/libglog.a",
   ],
+  defines = ["GOOGLE_STRIP_LOG=1"],
   linkopts = ["-pthread"],
   linkstatic = 1,
 )
