Integrated decompiler ROMReader and Instructions.

--- a/base_workspace/backend/opcode_executor/BUILD
+++ b/base_workspace/backend/opcode_executor/BUILD
@@ -12,14 +12,26 @@ cc_library(
 )
 
 cc_library(
+  name = "executor_context",
+  hdrs = ["executor_context.h"],
+  deps = [
+    "//backend/memory:memory_mapper",
+    ":registers",
+  ],
+)
+
+cc_library(
   name = "opcode_executor",
   hdrs = ["opcode_executor.h"],
   srcs = ["opcode_executor.cc"],
   deps = [
+    "//backend/decompiler:rom_reader",
     "//backend/memory:interrupt_flag",
     "//backend/memory:memory_mapper",
+    "//backend/memory:memory_mapper_rom_bridge",
     "//backend/memory:primary_flags",
     "//submodules:glog",
+    ":executor_context",
     ":opcode_map",
     ":opcodes",
     ":registers",
@@ -38,8 +50,10 @@ cc_library(
     "opcode_handlers.cc",
   ],
   deps = [
+    "//backend/decompiler:instruction",
     "//backend/memory:memory_mapper",
     "//submodules:glog",
+    ":executor_context",
     ":opcodes",
     ":registers",
   ],
