--- a/base_workspace/backend/opcode_executor/BUILD
+++ b/base_workspace/backend/opcode_executor/BUILD
@@ -64,6 +64,14 @@ cc_test(
   name = "opcode_handlers_test",
   srcs = ["opcode_handlers_test.cc"],
   deps = [
+    "//backend/graphics:graphics_controller",
+    "//backend/graphics:screen",
+    "//backend/memory:default_module",
+    "//backend/memory:dma_transfer",
+    "//backend/memory:mbc_module",
+    "//backend/memory:memory_mapper",
+    "//backend/memory:primary_flags",
+    "//backend/memory:unimplemented_module",
     "//submodules:glog",
     "//test_harness",
     ":opcode_map",
