Added joypad support.

--- a/base_workspace/backend/BUILD
+++ b/base_workspace/backend/BUILD
@@ -1,7 +1,10 @@
 cc_binary(
   name = "turbo",
   srcs = ["main.cc"],
-  deps = ["//backend/clocktroller"],
+  deps = [
+    "//backend/clocktroller",
+    "//backend/memory:joypad_module",
+  ],
   linkopts = [
     "-L/usr/local/lib",
     "-lncurses",
