Wrote most of the screen code for JNI.

--- a/base_workspace/java/com/turbosanta/backend/BUILD
+++ b/base_workspace/java/com/turbosanta/backend/BUILD
@@ -1,13 +1,21 @@
 java_binary(
   name = "main",
   srcs = ["Main.java"],
-  deps = [":clocktroller"],
+  deps = [
+    "//java/com/turbosanta/backend/graphics:drawable_area",
+    "//java/com/turbosanta/backend/graphics:screen_java",
+    ":clocktroller",
+  ],
   main_class = "com.turbosanta.backend.Main",
+  jvm_flags = ["-Xss515m"],
 )
 
 java_library(
   name = "clocktroller",
   srcs = ["Clocktroller.java"],
+  deps = [
+    "//java/com/turbosanta/backend/graphics:screen_java",
+  ],
   data = [":libclocktrollerjni.so"],
 )
 
@@ -33,14 +41,23 @@ cc_binary(
   srcs = [
     "com_turbosanta_backend_Clocktroller.cc",
     "com_turbosanta_backend_Clocktroller.h",
-    "handle.h",
-    ":jni.h",
-    ":jni_md.h",
   ],
   deps = [
     "//backend/clocktroller",
     "//backend/graphics:screen",
+    "//java/com/turbosanta/backend/graphics:screen_cc",
+    ":jni_headers",
+  ],
+  linkshared = 1,
+)
+
+cc_library(
+  name = "jni_headers",
+  srcs = [
+    "handle.h",
+    ":jni.h",
+    ":jni_md.h",
   ],
   includes = ["."],
-  linkshared = 1,
+  visibility = ["//:__subpackages__"],
 )
