Fixed JNI asynchronous call back.

--- a/base_workspace/java/com/turbosanta/backend/BUILD
+++ b/base_workspace/java/com/turbosanta/backend/BUILD
@@ -46,6 +46,7 @@ cc_binary(
     "//backend/clocktroller",
     "//backend/graphics:screen",
     "//java/com/turbosanta/backend/graphics:screen_cc",
+    "//submodules:glog",
     ":jni_headers",
   ],
   linkshared = 1,
