Added timer module.

--- a/base_workspace/backend/clocktroller/BUILD
+++ b/base_workspace/backend/clocktroller/BUILD
@@ -10,6 +10,7 @@ cc_library(
     "//backend/memory:default_module",
     "//backend/memory:dma_transfer",
     "//backend/memory:joypad_module",
+    "//backend/memory/timer",
     "//backend/memory:mbc_module",
     "//backend/memory:memory_mapper",
     "//backend/memory:primary_flags",
