--- a/base_workspace/cc/backend/clocktroller/BUILD
+++ b/base_workspace/cc/backend/clocktroller/BUILD
@@ -7,14 +7,14 @@ cc_library(
   deps = [
     "//cc/backend/graphics:graphics_controller",
     "//cc/backend/graphics:screen",
-    "//cc/backend/memory:default_module",
-    "//cc/backend/memory:dma_transfer",
-    "//cc/backend/memory:joypad_module",
+    "//cc/backend/memory/ram:default_module",
+    "//cc/backend/memory/dma_transfer",
+    "//cc/backend/memory/joypad:joypad_module",
     "//cc/backend/memory/timer",
-    "//cc/backend/memory:mbc_module",
+    "//cc/backend/memory/mbc:mbc_module",
     "//cc/backend/memory:memory_mapper",
-    "//cc/backend/memory:primary_flags",
-    "//cc/backend/memory:unimplemented_module",
+    "//cc/backend/memory/interrupt:primary_flags",
+    "//cc/backend/memory/unimplemented:unimplemented_module",
     "//cc/backend/opcode_executor",
   ],
   visibility = ["//visibility:public"],
