--- a/base_workspace/java/com/turbosanta/backend/clocktroller/BUILD
+++ b/base_workspace/java/com/turbosanta/backend/clocktroller/BUILD
@@ -18,7 +18,7 @@ cc_binary(
     "//cc/backend/clocktroller",
     "//cc/backend/graphics:screen",
     "//java/com/turbosanta/backend/graphics:screen_cc",
-    "//submodules:glog",
+    "//external:glog",
     "//java/com/turbosanta/backend:jni_headers",
   ],
   linkshared = 1,
