--- a/base_workspace/cc/backend/memory/timer/BUILD
+++ b/base_workspace/cc/backend/memory/timer/BUILD
@@ -8,7 +8,7 @@ cc_library(
     "//cc/backend/memory/interrupt:interrupt_flag",
     "//cc/backend/memory:flags",
     "//cc/backend/memory:module",
-    "//submodules:glog",
+    "//external:glog",
   ],
   visibility = ["//visibility:public"], #"//cc/backend/memory:__pkg__"],
 )
