Moved memory initialization to Memory object.

--- a/base_workspace/cc/backend/clocktroller/BUILD
+++ b/base_workspace/cc/backend/clocktroller/BUILD
@@ -5,16 +5,11 @@ cc_library(
     ":clocktroller.cc",
   ],
   deps = [
-    "//cc/backend/graphics:graphics_controller",
     "//cc/backend/graphics:screen",
-    "//cc/backend/memory/ram:default_module",
-    "//cc/backend/memory/dma_transfer",
-    "//cc/backend/memory/joypad:joypad_module",
-    "//cc/backend/memory/timer",
-    "//cc/backend/memory/mbc:mbc_module",
-    "//cc/backend/memory:memory_mapper",
+    "//cc/backend/memory",
     "//cc/backend/memory/interrupt:primary_flags",
-    "//cc/backend/memory/unimplemented:unimplemented_module",
+    "//cc/backend/memory/joypad:joypad_module",
+    "//cc/backend/memory:memory_mapper",
     "//cc/backend/opcode_executor",
     "//external:glog",
   ],
