--- a/base_workspace/cc/backend/memory/BUILD
+++ b/base_workspace/cc/backend/memory/BUILD
@@ -1,4 +1,23 @@
 cc_library(
+  name = "memory",
+  hdrs = ["memory.h"],
+  srcs = ["memory.cc"],
+  deps = [
+    "//cc/backend/graphics:graphics_controller",
+    "//cc/backend/graphics:screen",
+    "//cc/backend/memory/ram:default_module",
+    "//cc/backend/memory/dma_transfer",
+    "//cc/backend/memory/joypad:joypad_module",
+    "//cc/backend/memory/timer",
+    "//cc/backend/memory/mbc:mbc_module",
+    "//cc/backend/memory:memory_mapper",
+    "//cc/backend/memory/interrupt:primary_flags",
+    "//cc/backend/memory/unimplemented:unimplemented_module",
+  ],
+  visibility = ["//visibility:public"],
+)
+
+cc_library(
   name = "memory_segment",
   hdrs = ["memory_segment.h"],
   visibility = ["//visibility:public"],
