Got structured logging working.

--- a/base_workspace/cc/backend/clocktroller/BUILD
+++ b/base_workspace/cc/backend/clocktroller/BUILD
@@ -5,6 +5,8 @@ cc_library(
     ":clocktroller.cc",
   ],
   deps = [
+    "//cc/backend/debug:master",
+    "//cc/backend/debug/memory_profiler",
     "//cc/backend/graphics:screen",
     "//cc/backend/memory",
     "//cc/backend/memory/interrupt:primary_flags",
@@ -13,6 +15,7 @@ cc_library(
     "//cc/backend/opcode_executor",
     "//external:glog",
   ],
+  linkopts = ["-pthread"],
   visibility = ["//visibility:public"],
 )
 
