--- a/base_workspace/cc/backend/memory/BUILD
+++ b/base_workspace/cc/backend/memory/BUILD
@@ -71,8 +71,7 @@ cc_library(
   hdrs = ["memory_mapper.h"],
   srcs = ["memory_mapper.cc"],
   deps = [
-    "//cc/backend/debug/memory_profiler:memory_access",
-    "//cc/backend/debug:publisher",
+    "//cc/backend/logging",
     "//external:glog",
     ":flags",
     ":flag_container",
