--- a/base_workspace/cc/backend/sound/BUILD
+++ b/base_workspace/cc/backend/sound/BUILD
@@ -1,10 +1,21 @@
 cc_library(
   name = "sound_controller",
-  srcs = ["sound_controller.cc"],
-  hdrs = ["sound_controller.h"],
+  srcs = [
+    "sound_controller.cc"
+  ],
+  hdrs = [
+    "sound_controller.h"
+  ],
   deps = [
     "//cc/backend/memory:memory_segment",
     "//cc/backend/memory:module",
+    ":sound_player"
   ],
+  visibility = ["//visibility:public"],
+)
+
+cc_library(
+  name = "sound_player",
+  hdrs = ["sound_player.h"],
   visibility = ["//visibility:public"],
 )
